@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="lib/last.fm-bindings-7.3.jar" sourcepath="lib/last.fm-bindings-7.3-src.jar"/>
 	<classpathentry kind="lib" path="lib/pircbot-1.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/ErkiAPI-0.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/rsslib4j-0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
