@@ -20,6 +20,7 @@ package erki.xpeter.util;
 import java.util.LinkedList;
 import java.util.TreeMap;
 
+import erki.xpeter.parsers.feeds.RssFeed;
 import erki.xpeter.parsers.sms.ShortMessage;
 import erki.xpeter.parsers.sms.SimpleMailbox;
 
@@ -32,8 +33,14 @@ import erki.xpeter.parsers.sms.SimpleMailbox;
 public enum Keys {
     
     /**
-     * A {@link TreeMap} &lt;{@link String}, {@link LinkedList}&lt;{@link ShortMessage}&gt;&gt; that
+     * A {@link TreeMap}&lt;{@link String}, {@link LinkedList}&lt;{@link ShortMessage}&gt;&gt; that
      * contains the short messages stored by {@link SimpleMailbox}.
      */
     SHORT_MESSAGES,
+
+    /**
+     * This {@link TreeMap}&lt;{@link String}, {@link LinkedList}&lt;{@link String}&gt;&gt; contains
+     * all the feed urls known to {@link RssFeed} together with all the entries already posted.
+     */
+    RSS_FEEDS,
 }
